[package]
name = "rust_vault_snippets"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
cipher =  { version = "0.4.4", default-features = false }
ink = { version = "4.0.1", default-features = false }

# Phala ink! extension
pink-extension = { version = "0.4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5.0" }

aes-gcm-siv = { version = "0.11.1", default-features = false, features = ["aes", "alloc"] }

debug_print = { version = "1.0"}

rand = { version = "0.8.5", default-features = false }
getrandom = { version = "0.2", features = ["js"] }

# default-features= false --> Disabled STD, which is enabled by default
libsecp256k1 = { version="0.7.1", default-features = false, features = ["static-context"] } 

[dev-dependencies]
ink_e2e = "4.0.1"
pink-extension-runtime = "0.4"


[lib]
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "pink-extension/std", "serde-json-core/std"]
ink-as-dependency = []
e2e-tests = []
